corpus/baselines/compiler/inexistentPropertyInsideToStringType.errors.txt
index.js(2,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
index.js(3,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== index.js (2 errors) ====
    function toString() {
        this.yadda
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        this.someValue = "";
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }